fixing the side bar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
     line-height: 1.6;
     background-color:#ecd9c6;
 
-    margin-left: 280px;
+    margin-left: 300px;
     margin-right: 20px;
 }
 
